calculator visual area fixed

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                                 <p><b>ВП </b></p>
                                 <p>Внутренние<br>Пути</p>
                             </div>
-                            <span>+</span>
+                            <span><div><div></div></div>+<div><div></div></div></span>
                             <div>
                                 <p><b>ВВП </b></p>
                                 <p>Внутренние<br>Водные Пути</p>
@@ -481,12 +481,12 @@
                                 <p><b>ВП </b></p>
                                 <p>Внутренние<br>Пути</p>
                             </div>
-                            <span>+</span>
+                            <span><div><div></div></div>+<div><div></div></div></span>
                             <div>
                                 <p><b>ВВП </b></p>
                                 <p>Внутренние<br>Водные Пути</p>
                             </div>
-                            <span>+</span>
+                            <span><div><div></div></div>+<div><div></div></div></span>
                             <div>
                                 <p><b>МП </b></p>
                                 <p>Морские Пути</p>
