--- a/index.html
+++ b/index.html
@@ -142,9 +142,8 @@
         </a>
     </div>
     <div class="up up-invisible"><img src="images/svg/btn-arrow-blue.svg" alt="" loading="lazy"></div>
-    <section class="swiper slider">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">
+    <section class="slider">
+            <div class="slider__content">
                 <div class="section-box">
                     <div>
                         <h2>подготовка судоводителей<span>маломерных судов</span></h2>
@@ -152,52 +151,8 @@
                     </div>
                     <a href="#" class="btn-normal">получить консультацию</a>
                 </div>
-            <img src="images/main-swiper-bg.jpg" alt="" loading="lazy">
+                <img src="images/main-swiper-bg.jpg" alt="" loading="lazy">
             </div>
-            <div class="swiper-slide">
-                <div class="section-box">
-                    <div>
-                        <h2>подготовка судоводителей<span>маломерных судов</span></h2>
-                        <p>собственные маломерные суда - мы не арендуем водный транспорт у других, а имеем в собственности моторное судно и гидроцикл! Наши водо-моторные средства постоянно находятся на базе Центра ГИМС на озере Смолино.</p>
-                    </div>
-                    <a href="#" class="btn-normal">получить консультацию</a>
-                </div>
-            <img src="images/main-swiper-bg.jpg" alt="" loading="lazy">
-            </div>
-            <div class="swiper-slide">
-                <div class="section-box">
-                    <div>
-                        <h2>подготовка судоводителей<span>маломерных судов</span></h2>
-                        <p>собственные маломерные суда - мы не арендуем водный транспорт у других, а имеем в собственности моторное судно и гидроцикл! Наши водо-моторные средства постоянно находятся на базе Центра ГИМС на озере Смолино.</p>
-                    </div>
-                    <a href="#" class="btn-normal">получить консультацию</a>
-                </div>
-            <img src="images/main-swiper-bg.jpg" alt="" loading="lazy">
-            </div>
-            <div class="swiper-slide">
-                <div class="section-box">
-                    <div>
-                        <h2>подготовка судоводителей<span>маломерных судов</span></h2>
-                        <p>собственные маломерные суда - мы не арендуем водный транспорт у других, а имеем в собственности моторное судно и гидроцикл! Наши водо-моторные средства постоянно находятся на базе Центра ГИМС на озере Смолино.</p>
-                    </div>
-                    <a href="#" class="btn-normal">получить консультацию</a>
-                </div>
-            <img src="images/main-swiper-bg.jpg" alt="" loading="lazy">
-            </div>
-            <div class="swiper-slide">
-                <div class="section-box">
-                    <div>
-                        <h2>подготовка судоводителей<span>маломерных судов</span></h2>
-                        <p>собственные маломерные суда - мы не арендуем водный транспорт у других, а имеем в собственности моторное судно и гидроцикл! Наши водо-моторные средства постоянно находятся на базе Центра ГИМС на озере Смолино.</p>
-                    </div>
-                    <a href="#" class="btn-normal">получить консультацию</a>
-                </div>
-            <img src="images/main-swiper-bg.jpg" alt="" loading="lazy">
-            </div>
-        </div>
-        <div class="swiper-pagination"></div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
     </section>
     <section class="services">
         <h2>школа <span>готовит судоводителей</span></h2>
@@ -231,7 +186,7 @@
                     <div class="swiper-button-next"></div>
                 </div>
                 <div class="services__areas">
-                    <h3>Наша школа <span>обучает на допуск</span></h3>
+                    <h3>школа <span>обучает на допуск</span></h3>
                     <h3>во все возможные районы плавания</h3>
                     <div class="services__areas__content">
                         <div class="services__areas__card">
@@ -495,7 +450,7 @@
                     </div>
                     <div class="calculator__visual__content">
                         <p>Ваша стоимость: <span>0 руб.</span></p>
-                        <button href="#" class="btn-normal disabled">Далее</button>
+                        <button href="#" class="btn-normal disabled">записаться на обучение</button>
                     </div>
                 </div>
                 <img src="images/svg/pattern.svg" alt="" loading="lazy">
@@ -523,10 +478,10 @@
             <div class="footer__content">
                 <nav class="menu footer__menu">
                     <a href="#">О нас</a>
-                    <a href="#" class="active">Услуги</a>
-                    <a href="#">лицензии и разрешения</a>
+                    <a href="#" class="active">Программы обучения</a>
+                    <a href="#">Как получить “права” ГИМС</a>
                     <a href="#">наши клиенты</a>
-                    <a href="#" class="active-secondary">наши клиенты</a>
+                    <a href="#" class="active-secondary">Стоимость</a>
                     <a href="#">Контакты</a>
                 </nav>
                 <div>
@@ -552,8 +507,8 @@
                                             <path d="M7 9C8.10457 9 9 8.10457 9 7C9 5.89543 8.10457 5 7 5C5.89543 5 5 5.89543 5 7C5 8.10457 5.89543 9 7 9Z" stroke="#56A2E9" stroke-width="1.5"/>
                                         </svg>
                                         <div>
-                                            <p>Адрес тира:</p>
-                                            <p><span>г. Челябинск</span> ул. Плеханова д.1А</p>
+                                            <p>Адрес Центра ГИМС на озере Смолино:</p>
+                                            <p><span>г. Челябинск</span> ул. Магнитогорская, 3</p>
                                         </div>
                                     </div>
                                 </div>
