--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
                     <h3>во все возможные районы плавания</h3>
                     <div class="services__areas__content">
                         <div class="services__areas__card">
-                            <h3>ВП</h3>
-                            <p><span>Внутренние пути</span> – водоемы, для передвижения по которым не требуется соблюдения знаков приоритета между судоводителями, как на внутренних водных путях (не судоходные реки и озёра)</p>
+                            <h3>ВВ</h3>
+                            <p><span>Внутренние воды</span> – водоемы, для передвижения по которым не требуется соблюдения знаков приоритета между судоводителями, как на внутренних водных путях (не судоходные реки и озёра)</p>
                         </div>
                         <div class="services__areas__card">
                             <h3>ВВП</h3>
@@ -348,7 +348,7 @@
                             <div>
                                  <input type="radio" value="1" id="area1" name="area" class="calculator__checkbox">
                                 <label for="area1">
-                                    <div><span><b>ВП </b></span><span>Внутренние пути</span></div>
+                                    <div><span><b>ВВ </b></span><span>Внутренние воды</span></div>
                                     <span><i>не судоходные реки и озера</i></span>
                                     <span></span>
                                 </label>
@@ -378,7 +378,7 @@
                             <div>
                                 <input type="radio" value="4" id="area4" name="area" class="calculator__checkbox">
                                 <label for="area4">
-                                    <div><span><b>ВП </b></span><span>Внутренние Пути </span><span><b>+</b></span></div>
+                                    <div><span><b>ВВ </b></span><span>Внутренние Воды </span><span><b>+</b></span></div>
                                     <div><span><b>ВВП </b></span><span>Внутренние<br>Водные Пути</span></div>
                                     <span></span>
                                 </label>
@@ -404,8 +404,8 @@
                     <div class="calculator__visual__areas">
                         <div class="calculator__visual__area calculator__visual__area_1 disabled">
                             <div>
-                                <p><b>ВП </b></p>
-                                <p>Внутренние<br>Пути</p>
+                                <p><b>ВВ </b></p>
+                                <p>Внутренние<br>Воды</p>
                             </div>
                         </div>
                         <div class="calculator__visual__area calculator__visual__area_2 disabled">
@@ -422,8 +422,8 @@
                         </div>
                         <div class="calculator__visual__area calculator__visual__area_4 disabled">
                             <div>
-                                <p><b>ВП </b></p>
-                                <p>Внутренние<br>Пути</p>
+                                <p><b>ВВ </b></p>
+                                <p>Внутренние<br>Воды</p>
                             </div>
                             <span><div><div></div></div>+<div><div></div></div></span>
                             <div>
@@ -433,8 +433,8 @@
                         </div>
                         <div class="calculator__visual__area calculator__visual__area_5 disabled">
                             <div>
-                                <p><b>ВП </b></p>
-                                <p>Внутренние<br>Пути</p>
+                                <p><b>ВВ </b></p>
+                                <p>Внутренние<br>Воды</p>
                             </div>
                             <span><div><div></div></div>+<div><div></div></div></span>
                             <div>
