--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                             <div>
                                 <input type="radio" value="5" id="area5" name="area" class="calculator__checkbox">
                                 <label for="area5">
-                                    <div><span><b>ВП</b></span><span><b>+</b></span><span><b>ВВП</b></span><span><b>+</b></span><span><b>МП</b></span></div>
+                                    <div><span><b>ВВ</b></span><span><b>+</b></span><span><b>ВВП</b></span><span><b>+</b></span><span><b>МП</b></span></div>
                                     <span>все районы плавания</span>
                                     <span></span>
                                 </label>
